# pymolish

./: .gitignore  ARCHITECTURE_PLAN.md  CLAUDE.md  README.md  pyproject.toml
docs/commands/: README.md  animation.md  groups.md  i_o.md  meta.md  selection.md  structure.md  visualization.md
plans/finalized/: phase-1-scaffold.md  phase-2-migration.md
pymol-plugins/: .gitignore
scripts/: generate_docs.py
src/pymolish/: __init__.py
src/pymolish/core/: __init__.py  autocompletion.py  group_utils.py  logging.py  registry.py  types.py  validators.py
src/pymolish/extensions/: __init__.py
src/pymolish/extensions/animation/: __init__.py  movie_group.py  transparency.py
src/pymolish/extensions/groups/: __init__.py  copy.py  extract_chain.py  merge.py  navigate.py  sort.py  toggle.py
src/pymolish/extensions/io/: __init__.py  export_byres.py  export_group.py  load_files.py
src/pymolish/extensions/selection/: __init__.py  sequence_search.py
src/pymolish/extensions/structure/: __init__.py  clean.py  cluster_ligands.py  fetch_uniprot.py  multialign.py
src/pymolish/extensions/visualization/: __init__.py  color_group.py  color_ss.py  palettes.py
src/pymolish/gui/: __init__.py  base_dialog.py  widgets.py
tests/: conftest.py  test_autocompletion.py  test_logging.py  test_plugin_bootstrap.py  test_registry.py  test_validators.py
tests/test_animation/: test_animation_init.py  test_movie_group.py  test_transparency.py
tests/test_groups/: test_copy.py  test_extract_chain.py  test_groups_init.py  test_merge.py  test_navigate.py  test_sort.py  test_toggle.py
tests/test_io/: test_export_byres.py  test_export_group.py  test_io_init.py  test_load_files.py
tests/test_selection/: test_selection_init.py  test_sequence_search.py
tests/test_structure/: test_clean.py  test_cluster_ligands.py  test_fetch_uniprot.py  test_multialign.py  test_structure_init.py
tests/test_visualization/: test_color_group.py  test_color_ss.py  test_palettes.py  test_visualization_init.py
