[project]
name = "pymolish"
version = "0.1.0"
description = "PyMOLish — curated PyMOL Open Source command extension library"
requires-python = ">=3.10"
authors = [
  {name = "Adrian Jasiński", email = "jasinski.adrian@gmail.com"},
]
keywords = ["pymol", "pymol-command", "pymol-plugin", "molecular-modelling"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
matplotlib = ["matplotlib>=3.3"]
biopython = ["biopython>=1.83", "requests>=2.25"]
gui = ["PyQt5>=5.15"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
]
all = [
  "numpy>=1.20",
  "matplotlib>=3.3",
  "biopython>=1.83",
  "requests>=2.25",
  "PyQt5>=5.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymolish"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "D",   # pydocstyle
]
ignore = [
  "D100",  # Missing docstring in public module
  "D104",  # Missing docstring in public package
  "N807",  # Function names starting/ending with __ (PyMOL requires __init_plugin__)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D103", "D105", "D107"]  # Tests don't need docstrings

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
]
